--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@civic/auth": "^0.5.3",
     "@civic/auth-web3": "^0.5.7",
+    "ethers": "^6.14.0",
     "next": "15.3.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
