--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   "dependencies": {
     "@civic/auth": "^0.5.3",
     "@civic/auth-web3": "^0.5.7",
+    "@tanstack/react-query": "^5.75.7",
     "ethers": "^6.14.0",
     "next": "15.3.2",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "viem": "^2.29.2",
+    "wagmi": "^2.15.2"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
