--- a/my-app/package.json
+++ b/my-app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "openreward",
+  "name": "my-app",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,17 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@civic/auth": "^0.5.3",
-    "@civic/auth-web3": "^0.5.7",
-    "@tanstack/react-query": "^5.75.7",
-    "ethers": "^6.14.0",
-    "mongodb": "^6.16.0",
     "mongoose": "^8.14.2",
     "next": "15.3.2",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "viem": "^2.29.2",
-    "wagmi": "^2.15.2"
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
