added BountyProvider model

--- a/env.example
+++ b/env.example
@@ -1,2 +1,3 @@
 NEXT_PUBLIC_CLIENT_ID=YOUR_CIVIC_AUTH_CLIENT_ID
 NEXT_PUBLIC_SEPOLIA_RPC_URL=https://eth-sepolia.g.alchemy.com/v2/API
+NEXT_PUBLIC_MONGO_URI= MONGOURI
