added onboarding workflow

--- a/package.json
+++ b/package.json
@@ -11,15 +11,19 @@
   "dependencies": {
     "@civic/auth": "^0.5.3",
     "@civic/auth-web3": "^0.5.7",
+    "@hookform/resolvers": "^5.0.1",
     "@tanstack/react-query": "^5.75.7",
     "ethers": "^6.14.0",
+    "framer-motion": "^12.10.5",
     "mongodb": "^6.16.0",
     "mongoose": "^8.14.2",
     "next": "15.3.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.56.3",
     "viem": "^2.29.2",
-    "wagmi": "^2.15.2"
+    "wagmi": "^2.15.2",
+    "zod": "^3.24.4"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
