--- a/package.json
+++ b/package.json
@@ -12,15 +12,28 @@
     "@civic/auth": "^0.5.3",
     "@civic/auth-web3": "^0.5.7",
     "@hookform/resolvers": "^5.0.1",
+    "@radix-ui/react-separator": "^1.1.6",
+    "@radix-ui/react-slot": "^1.2.2",
+    "@radix-ui/react-tabs": "^1.1.11",
     "@tanstack/react-query": "^5.75.7",
+    "@vercel/analytics": "^1.5.0",
+    "axios": "^1.9.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "ethers": "^6.14.0",
     "framer-motion": "^12.10.5",
+    "lucide-react": "^0.510.0",
     "mongodb": "^6.16.0",
     "mongoose": "^8.14.2",
     "next": "15.3.2",
+    "next-themes": "^0.4.6",
     "react": "^19.0.0",
+    "react-countup": "^6.5.3",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.3",
+    "sonner": "^2.0.3",
+    "tailwind-merge": "^3.3.0",
+    "tailwindcss-animate": "^1.0.7",
     "viem": "^2.29.2",
     "wagmi": "^2.15.2",
     "zod": "^3.24.4"
@@ -30,7 +43,10 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "tailwindcss": "^4",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^3.4.17",
+    "tw-animate-css": "^1.2.9",
     "typescript": "^5"
   }
 }
