--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@civic/auth": "^0.5.3",
     "@civic/auth-web3": "^0.5.7",
     "@hookform/resolvers": "^5.0.1",
+    "@octokit/graphql": "^8.2.2",
     "@radix-ui/react-separator": "^1.1.6",
     "@radix-ui/react-slot": "^1.2.2",
     "@radix-ui/react-tabs": "^1.1.11",
